# tw-cli-utils

./: .gitignore  README.md  USAGE.md  example-config.toml  my-config.toml  pyproject.toml  test_kanban.py
examples/: basic_usage.py  custom_view.py
src/tw_cli/: __init__.py  config.py  main.py  models.py  shell.py  taskwarrior.py
src/tw_cli/backends/: __init__.py  base.py  factory.py  jira.py  taskwarrior.py
src/tw_cli/views/: __init__.py  base.py  list.py  markdown.py  table.py
