[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-cli"
version = "0.1.0"
description = "Enhanced CLI interface for Taskwarrior with multiple view modes (kanban, table, markdown) using Rich"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Vishal" }
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tw-cli = "tw_cli.main:app"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
